# riseos-agent-orchestrator

./: .env.example  README.md  SLACK_SPLIT_VALIDATION.md  pyproject.toml  test
app/: actions_repair.py  circuit_hermes_adapter.py  circuit_runtime_validation.py  circuit_runtime_validation_routes.py  config.py  correlation.py  end_to_end_review_validation.py  event_store.py  github_context.py  github_events.py  github_writeback.py  hermes.py  hermes_dispatch.py  hermes_dispatch_impl.py  main.py  multi_worker_queue_contention_validation.py  operational_logging.py  orchestrator_snapshot.py  pr_workflow_state.py  queue_contention_validation.py  queue_lifecycle_validation.py  repository_discovery.py  review_queue.py  review_worker.py  review_workflow.py  runtime_validation.py  security.py  slack_issue_dispatch.py  storage.py  task_claim_registry.py  task_claim_registry_validation.py  task_dispatch.py  task_state.py  workflow_lifecycle.py  workflow_routes.py  workflows.py
context/: bb_architect_system_prompt.md  branch_policy.md  review_rubric.md
deploy/: riseos-agent-orchestrator.service
docs/: actions-repair-loop.md  agent_loop_staging_strategy_2026-06.md  architecture.md  bb2_architect_escalation_2026-06.md  ci-and-bb2-lifecycle.md  circuit-hermes-validation-handoff-2026-06.md  circuit_issue_dispatcher_2026-06.md  deployment_vultr.md  dispatch-correlation-timeline.md  github_issue_workflow.md  hermes-runtime-validation-agent-design.md  jmc-telemetry-contract-audit.md  operations.md  orchestrator_snapshot_contract_v1.md  pr_workflow_state_machine.md  workflows.md  (+6 more)
(+67 files in other folders)
